# talkingclock

./: .gitignore  .talkingclock.json  .travis.yml  Cargo.toml  LICENSE  README.md  Rakefile  appveyor.yml  config.json  locale.json  locale.txt  voice.json
locale/: es.json  nb.json
src/: config.rs  locale.rs  main.rs  voice.rs
