[package]
name = "talkingclock"
version = "0.1.1"
description = "Command line application which says the time."
authors = ["Sam Saint-Pettersen <s.stpettersen+github@gmail.com>"]

[dependencies]
clioptions = "0.1.0"
litepattern = "0.1.0"
litelocale = "0.1.0"
chrono = "0.4.0"
serde = "1.0.8"
serde_json = "1.0.2"
serde_derive = "1.0.9"
